--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -134,8 +134,8 @@
     <string name="action_sync">Senkronizasyon</string>
     <string name="action_wifi_ap">Wifi Erişim Noktası</string>
     <string name="action_airplane_mode">Uçak modu</string>
-    <string name="action_immersive_nav_bar">Immersive gezinme çubuğu</string>
-    <string name="action_immersive_status_bar">Immersive durum çubuğu</string>
+    <string name="action_immersive_nav_bar">Gezinti çubuğunu gizle</string>
+    <string name="action_immersive_status_bar">Durum çubuğunu gizle</string>
     <string name="action_keep_screen_on">Uyanık kal</string>
     <string name="action_torch">El feneri</string>
     <string name="action_screen_filter">Ekran filtresi</string>
@@ -316,14 +316,14 @@
     <string name="sound_effect">Ses efekti</string>
     <string name="vibrate_effect">Titreşim efekti</string>
     <string name="vibrate_strength">Titreşim uzunluğu</string>
-    <string name="effect_only_screen_on">Sadece ekran açıkken ses/titreşim</string>
+    <string name="effect_only_screen_on">Sadece ekran açıkken ses çal/titret</string>
     <string name="toast_level">Bildirim düzeyi</string>
     <string name="visual_effect">Görsel efekt</string>
     <string name="show_text_on_shortcut_panel">Metni kısayol panelinde göster</string>
     <string name="show_text_on_side_bar">Metni kenar çubuğunda göster</string>
     <string name="show_text_on_other_drawers">Metni diğer çekmecelerde göster</string>
-    <string name="notify_for_actions">Eylemler için bildirim</string>
-    <string name="auto_freeze_only_app_died">Sadece uyg sonlandığında otomatik dondur</string>
+    <string name="notify_for_actions">Bildirilecek eylemler</string>
+    <string name="auto_freeze_only_app_died">Sadece uyg sonlandığında oto dondur</string>
     <string name="force_nav_bar_state">Gezinti çubuğu durumunu zorla (yeniden başlatma gerekir)</string>
 
     <string name="dark_theme">Karanlık</string>
@@ -331,7 +331,7 @@
     <string name="never">Asla</string>
     <string name="gesture_recording">Hareket kaydı</string>
     <string name="gesture_injecting">Hareket ekleme</string>
-    <string name="both">Her ikisi de</string>
+    <string name="both">Her ikisinde de</string>
     <string name="important">Önemli</string>
     <string name="general">Genel</string>
     <string name="verbose">Ayrıntılı</string>
@@ -461,7 +461,7 @@
     <string name="description" translatable="false">Bu modül size sistem düzeyinde kontroller ve eylemler sunar. İstediğiniz eylemleri tetiklemek için hareketi, tuşları, telefon durumunu, vb…, yeniden eşleştirin.</string>
 
     <string name="condition_soft_keyboard_showing">Yazılımsal klavye gösteriliyor</string>
-    <string name="action_refreeze">Dondurucudaki uygulamaları yeniden dondur</string>
+    <string name="action_refreeze">Dondurucudaki uyglmlrı yeniden dondur</string>
     <string name="light_gray_theme">Açık gri</string>
     <string name="insert">Ekle</string>
     <string name="action_custom_panel">Özel panel</string>
@@ -535,12 +535,12 @@
     <string name="mode_transform">Dönüştürme modu</string>
     <string name="export_as_command">Komut olarak dışa aktar</string>
     <string name="variables">Değişkenler</string>
-    <string name="allows_perform_by_broadcast">Yayın yoluyla gerçekleştirilir</string>
-    <string name="perform_by_broadcast_not_allowed">Yayın yoluyla gerçekleştirilemez!</string>
+    <string name="allows_perform_by_broadcast">Yayın yoluyla gerçekleştirilmesine izin verir</string>
+    <string name="perform_by_broadcast_not_allowed">Yayın yoluyla gerçekleştirilmesine izin verilmez!</string>
     <string name="tutorial_online">Çevrimiçi öğretici</string>
     <string name="disable_gesture_on_keyguard">Tuş kilidinde hareketi devre dışı bırak</string>
     <string name="slide_adjust_color">Sürgü ayarlama rengi</string>
-    <string name="disable_auto_brightness_when_brightness_adjusted">Parlaklık ayarlıyken otomatik parlaklığı devre dışı bırak</string>
+    <string name="disable_auto_brightness_when_brightness_adjusted">Parlaklık ayarlıyken oto parlaklığı devre dışı bırak</string>
     <string name="screenshot_fullscreen">Tam ekran görüntüsü</string>
     <string name="screenshot_selected_region">Kısmi ekran görüntüsü</string>
     <string name="effect_sound">Efekt sesi</string>
@@ -551,68 +551,68 @@
     <string name="rotate_90">° döndür</string>
     <string name="rotate_seascape">Deniz manzarasına döndür</string>
     <string name="rotate_upside_down">Baş aşağı döndür</string>
-    <string name="windows_not_focusable">Pencereler odaklanabilir değil</string>
-    <string name="windows_not_focusable_hint">Pencereler(paneller, çekmeceler…) yazılımsal klavyenin üstünde gösterilir, ayarlanmışsa tuş etkinlikleri alınmaz.</string>
+    <string name="windows_not_focusable">Pencereler odaklanamaz</string>
+    <string name="windows_not_focusable_hint">Pencereler klavyenin üstünde gösterilir, ayarlanan tuş etkinlikleri alınmaz.</string>
     <string name="action_game_mode">Oyun modu</string>
     <string name="ignore_edges">Kenarları yoksay</string>
     <string name="intercept_keys">Tuşları önle</string>
-    <string name="do_not_show_pen_toolbar_automatically">Kalem araç çubuğunu otomatik olarak gösterme</string>
-    <string name="do_not_show_pen_toolbar_automatically_hint">Araç çubuğunu iki parmağınızla dokunarak da gösterebilirsiniz.</string>
+    <string name="do_not_show_pen_toolbar_automatically">Kalem araç çubuğunu otomatik gösterme</string>
+    <string name="do_not_show_pen_toolbar_automatically_hint">Araç çubuğu iki parmakla dokunarak da gösterilebilir.</string>
     <string name="nothing_fetched">Hiçbir şey kopyalanmadı!</string>
     <string name="action_universal_copy">Evrensel kopyalama</string>
     <string name="clipboard_color">Pano rengi</string>
 
-    <string name="pie_scale">Pie scale</string>
-    <string name="by_two_finger">Only by two finger</string>
-    <string name="floating_widget_timeout">Floating widget timeout</string>
-    <string name="settings_should_be_moved">Settings should be moved from /data/data/com.jozein… to /data/user_de/0/com.jozein…\\nPlease launch this app, and reboot/soft reboot.</string>
-    <string name="action_finish_activity">Finish activity</string>
-    <string name="input_method_menu">Input method menu</string>
-    <string name="last_input_method">Last input method</string>
-    <string name="action_abort">Abort</string>
-    <string name="action_repeat">Repeat</string>
-    <string name="command_root_access">Root access</string>
-    <string name="count">Count:</string>
-    <string name="enter_count">Enter repeat count</string>
-    <string name="not_need_to_exec_su_explicitly">Not need to call su explicitly if root access checked.</string>
-    <string name="panel_scale">Panel scale</string>
-    <string name="action_media_control">Media control</string>
-    <string name="action_media_play">Media play</string>
-    <string name="gesture_hold">Hold</string>
-    <string name="action_sub_gestures">Sub gestures</string>
-    <string name="mode_default">Default</string>
-    <string name="widget_hint">Long press and hold to move widget, double tap and swipe to resize widget, use two finger to hide it.</string>
-    <string name="tiles">Quick settings tiles</string>
-    <string name="since_nougat">Since Android N</string>
-    <string name="edit_tile">Edit tile</string>
-    <string name="add_tile">Add tile</string>
-    <string name="remove_tile">Remove tile</string>
-    <string name="enable_tile">Enable tile</string>
-    <string name="disable_tile">Disable tile</string>
-    <string name="tile_added">Tile added.</string>
-    <string name="tile_removed">Tile removed.</string>
-    <string name="gesture_hold_timeout">Hold timeout of sub gesture</string>
-    <string name="sub_gesture_triggers_when_swiping">Sub gesture triggers when swiping</string>
-    <string name="tile_1">Tile 1</string>
-    <string name="tile_2">Tile 2</string>
-    <string name="tile_3">Tile 3</string>
-    <string name="tile_4">Tile 4</string>
-    <string name="tile_5">Tile 5</string>
-    <string name="tile_6">Tile 6</string>
-    <string name="tile_7">Tile 7</string>
-    <string name="tile_8">Tile 8</string>
-    <string name="tile_9">Tile 9</string>
-    <string name="tile_10">Tile 10</string>
-    <string name="tile_11">Tile 11</string>
-    <string name="tile_12">Tile 12</string>
-    <string name="icon_style_in_app">Icon style in app</string>
-    <string name="pie_icon_color">Pie icon color</string>
-    <string name="circle_icon_on_panels">Circle icon on panels</string>
-    <string name="panel_icon_color">Panel icon color</string>
-    <string name="panel_circle_background_color">Panel circle background color</string>
-    <string name="drawer_color">Drawer color</string>
-    <string name="colorful_circle_icon">Colorful circle icon</string>
-    <string name="circle_icon">Circle icon</string>
-    <string name="default_icon">Default icon</string>
+    <string name="pie_scale">Pasta dilimi ölçeği</string>
+    <string name="by_two_finger">Yalnızca iki parmakla</string>
+    <string name="floating_widget_timeout">Yüzen widget zaman aşımı</string>
+    <string name="settings_should_be_moved">Ayarlar /data/data/com.jozein… içinden /data/user_de/0/com.jozein… içine taşınmalıdır\\nLütfen bu uygulamayı çalıştırıp yeniden başlatın/hızlı yeniden başlatın.</string>
+    <string name="action_finish_activity">Etkinliği sonlandır</string>
+    <string name="input_method_menu">Giriş yöntemi menüsü</string>
+    <string name="last_input_method">Son giriş yöntemi</string>
+    <string name="action_abort">Durdur</string>
+    <string name="action_repeat">Tekrarla</string>
+    <string name="command_root_access">Root erişimi</string>
+    <string name="count">Sayı:</string>
+    <string name="enter_count">Tekrar sayısını girin</string>
+    <string name="not_need_to_exec_su_explicitly">Root erişimi işaretli ise su\'yu çağırmak gerekmez.</string>
+    <string name="panel_scale">Panel ölçeği</string>
+    <string name="action_media_control">Medya kontrolü</string>
+    <string name="action_media_play">Medyayı oynat</string>
+    <string name="gesture_hold">Basılı tut</string>
+    <string name="action_sub_gestures">Alt hareketler</string>
+    <string name="mode_default">Varsayılan</string>
+    <string name="widget_hint">Widget\'ı taşımak için uzun basın ve basılı tutun, widget\'ı yeniden boyutlandırmak için iki kez dokunun ve kaydırın, gizlemek için iki parmağınızı kullanın.</string>
+    <string name="tiles">Hızlı ayarlar kareleri</string>
+    <string name="since_nougat">Android N\'den beri</string>
+    <string name="edit_tile">Kareyi düzenle</string>
+    <string name="add_tile">Kareyi ekle</string>
+    <string name="remove_tile">Kareyi kaldır</string>
+    <string name="enable_tile">Kareyi etkinleştir</string>
+    <string name="disable_tile">Kareyi devre dışı bırak</string>
+    <string name="tile_added">Kare eklendi.</string>
+    <string name="tile_removed">Kare kaldırıldı.</string>
+    <string name="gesture_hold_timeout">Alt hareketin basılı tutma zaman aşımı</string>
+    <string name="sub_gesture_triggers_when_swiping">Alt hareket, kaydırırken tetiklenir</string>
+    <string name="tile_1">Kare 1</string>
+    <string name="tile_2">Kare 2</string>
+    <string name="tile_3">Kare 3</string>
+    <string name="tile_4">Kare 4</string>
+    <string name="tile_5">Kare 5</string>
+    <string name="tile_6">Kare 6</string>
+    <string name="tile_7">Kare 7</string>
+    <string name="tile_8">Kare 8</string>
+    <string name="tile_9">Kare 9</string>
+    <string name="tile_10">Kare 10</string>
+    <string name="tile_11">Kare 11</string>
+    <string name="tile_12">Kare 12</string>
+    <string name="icon_style_in_app">Uygulamada simge stili</string>
+    <string name="pie_icon_color">Pasta dilimi simgesi rengi</string>
+    <string name="circle_icon_on_panels">Panellerde daire simgesi</string>
+    <string name="panel_icon_color">Panel simgesi rengi</string>
+    <string name="panel_circle_background_color">Panel dairesi arka plan rengi</string>
+    <string name="drawer_color">Çekmece rengi</string>
+    <string name="colorful_circle_icon">Renkli daire simgesi</string>
+    <string name="circle_icon">Daire simgesi</string>
+    <string name="default_icon">Varsayılan simge</string>
 
 </resources>
