--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -616,5 +616,6 @@
     <string name="circle_icon">Circle icon</string>
     <string name="default_icon">Default icon</string>
     <string name="description">This module provides you Gesture control, Key control and other smart triggers. To trigger actions you want.</string>
+    <string name="action_stop_all">Stop all</string>
 
 </resources>
