--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -625,6 +625,7 @@
 
     <string name="description">This module provides you Gesture control, Key control and other smart triggers. To trigger actions you want.</string>
     <string name="action_stop_all">Stop all</string>
+    <string name="logs">Logs</string>
 
 </resources>
 
