--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="share">Share</string>
     <string name="help_and_support">Help and support</string>
     <string name="about">About</string>
+    <string name="logs">Logs</string>
     <string name="pro_only">Pro only</string>
     <string name="since_nougat">Since Android N</string>
 
