--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -626,6 +626,13 @@
     <string name="description">This module provides you Gesture control, Key control and other smart triggers. To trigger actions you want.</string>
     <string name="action_stop_all">Stop all</string>
     <string name="logs">Logs</string>
+    <string name="auto_dark_mode">Automatic</string>
+    <string name="vibrate_click">Click</string>
+    <string name="vibrate_custom">Custom</string>
+    <string name="vibrate_disable">Disable</string>
+    <string name="vibrate_double_click">Double click</string>
+    <string name="vibrate_heavy_click">Heavy click</string>
+    <string name="vibrate_tick">Tick</string>
 
 </resources>
 
