--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -426,7 +426,7 @@
     <string name="backups_path">备份路径</string>
     <string name="settings_restored">已导入，需要重启！</string>
     <string name="invalid_file">无效文件！</string>
-    <string name="permission_denied">权限拒绝！</string>
+    <string name="permission_denied">权限被拒绝！</string>
     <string name="memory_released_size_f">释放内存：%1$dM.</string>
     <string name="app_frozen_f">已冻结：%1$s</string>
     <string name="app_thawed_f">已解冻：%1$s</string>
@@ -619,5 +619,7 @@
     <string name="vibrate_double_click">双击</string>
     <string name="vibrate_heavy_click">重按</string>
     <string name="vibrate_tick">嘀嗒</string>
+    <string name="open_from">读取自…</string>
+    <string name="add_backup_to">添加到…</string>
 
 </resources>
